syntax = "proto3";

option csharp_namespace = "GRPCServer";

package random_number;

service RandomNumberFromRange 
{
	rpc GetRandomNumberFromRange (RandomNumberFromRangeRequest) returns (RandomNumberReply);
}

message RandomNumberFromRangeRequest 
{
	int32 start_number = 1;
	int32 end_number = 2;
}

message RandomNumberReply 
{
	string message = 1;
}
